--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   todoback:
@@ -15,7 +15,7 @@ services:
     environment:
       - REACT_APP_API_HOST=todoback
     depends_on:
-      - todoback
+      - "todoback"
 
   todotests:
     image: todotests
@@ -23,5 +23,5 @@ services:
     environment:
       - FRONT_HOST=todofront
     depends_on:
-      - todofront
-      - todoback
+      - "todofront"
+      - "todoback"
