--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14-alpine AS todofrontend
-WORKDIR /
-ADD node_modules.tar.gz todofrontend
+WORKDIR /app
+ADD node_modules.tar.gz .
 COPY . .
 EXPOSE 3000
-ENTRYPOINT ["npm", "start"]
+CMD ["npm", "start"]
