--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,5 +1,5 @@
 FROM mjgargani/puppeteer:trybe1.0 AS todotests
-WORKDIR /
-ADD node_modules.tar.gz todotests
+WORKDIR /app
+ADD node_modules.tar.gz .
 COPY . .
-ENTRYPOINT ["npm", "test"]
+CMD ["npm", "test"]
